--- a/kadai_008.html/kadai_008.html
+++ b/kadai_008.html/kadai_008.html
@@ -61,14 +61,16 @@
                  
              <input type="submit" value="送信"> 
              <input type="reset" value="リセット">
-            </form>
+                 </form>
+             </section> 
 
+             <section>
             <h2>テクノロジー</h2> 
             <h3>SAMURAIが新しい動画をリリース</h3> 
             <p>SAMURAI公式YouTubeで新しい動画がリリースされました。<br>
                 動画の内容はHTML/CSSの解説です。</p> 
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/2JLiGSUohEo?si=BpK8FGi7s9O89CK5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-              </section> 
+            </section>
         </article>
     </main>
 
